<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">内涵</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="main_tab_item_image">图片</string>
    <string name="main_tab_item_text">段子</string>
    <string name="main_tab_item_review">审核</string>
    <string name="main_tab_item_huodong">活动</string>
    <string name="main_tab_item_wode">我的</string>

</resources>
