<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <FrameLayout
        android:id="@+id/mainfram"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <RadioGroup
        android:id="@+id/main_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_tabbar"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/main_tab_item_text"
            style="@style/main_tab_item"
            android:checked="true"
            android:drawableTop="@drawable/main_tab_item_essay_bg"
            android:text="@string/main_tab_item_text" />

        <RadioButton
            android:id="@+id/main_tab_item_image"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/main_tab_image_bg"
            android:text="@string/main_tab_item_image" />

        <RadioButton
            android:id="@+id/main_tab_item_shenhe"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/main_tab_shenhe_bg"
            android:text="@string/main_tab_item_review" />

        <RadioButton
            android:id="@+id/main_tab_item_huodong"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/main_tab_item_huodong_bg"
            android:text="@string/main_tab_item_huodong" />

        <RadioButton
            android:id="@+id/main_tab_item_wode"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/main_tab_mine_bg"
            android:text="@string/main_tab_item_wode" />
    </RadioGroup>

</LinearLayout>